<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="8dp"
    android:background="@color/white"
    android:paddingTop="@dimen/dimen_16">

    <FrameLayout
        android:id="@+id/layout_add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLay_CarlicensePlateAdd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/licenseplate"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInput_carLicensePlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

    <!-- Soort voertuig -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_carVehicleAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Vehicle"
        app:endIconMode="clear_text"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLay_CarlicensePlateAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_carVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Merk/model voertuig -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_carModelAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Model"
        app:endIconMode="clear_text"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLay_carVehicleAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_carModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Aantal zitplaatsen voertuig -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_CarNrOfSeatsAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Number of seats"
        app:endIconMode="clear_text"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLay_carModelAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_carNrOfSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Bouwjaar voertuig -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_CarYearAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Year of manufacture"
        app:endIconMode="clear_text"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLay_CarNrOfSeatsAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_carYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Kleur voertuig -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_CarColorAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Color"
        app:endIconMode="clear_text"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLay_CarYearAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_carColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Aantal deuren voertuig -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLay_CarNrOfDoorsAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Number of doors"
        app:endIconMode="clear_text"
        android:paddingBottom="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLay_CarColorAdd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInput_carNrOfDoors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/button_car_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_car_get_rdwdetails"
        android:layout_width="90dp"
        android:layout_height="68dp"
        android:text="GET"
        app:layout_constraintStart_toEndOf="@+id/txtLay_CarlicensePlateAdd"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>